# citizen-affiliation-service

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  deploy-k8s.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  sonar-project.properties
.github/workflows/: ci.yml
affiliation/: __init__.py  admin.py  apps.py  signals.py
affiliation/api/: health.py  serializers.py  test_views.py  urls.py  views.py
affiliation/migrations/: 0001_initial.py  0002_affiliation_delete_affiliationevent_and_more.py  0003_citizen_is_active.py  0004_remove_citizen_is_active.py  0005_affiliation_documents_ready_and_more.py  0006_citizen_is_verified_citizen_pending_deletion_and_more.py  0007_add_transfer_destination_api_url.py
affiliation/models/: __init__.py  affiliation.py  citizen.py
config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: README.md
k8s/: README.md  configmap.yaml  consumer-deployment.yaml  deploy.sh  django-deployment.yaml  health-endpoint.py  hpa.yaml  ingress.yaml  kustomization.yaml  mysql-deployment.yaml  namespace.yaml  persistent-volume.yaml  rabbitmq-deployment.yaml  secrets.yaml
scripts/: check_verification_status.sh  setup_mysql_db.sql  simulate_documents_ready.py  test_complete_transfer_flow.sh  test_event_driven_registration.py  test_phase2_send_transfer.py  test_rabbitmq.py  test_registration_step_by_step.py
tests/: README.md  conftest.py  test_api_endpoints.py  test_citizen_service.py  test_consumers.py  test_coverage_boost.py  test_integration_flows.py  test_transfer_service.py
(+13 files in other folders)
